--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -1,14 +1,14 @@
 a {
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 a,
 a:hover,
 a:visited {
   text-decoration: none;
-  color: #f5f4f0;
+  color: #020100;
 }
 
 .headerRoot {
@@ -17,8 +17,4 @@ a:visited {
   justify-content: end;
   gap: 5em;
   padding: 2em 5em 2em 2em;
-
-  /* Colour */
-  background-color: black;
-  opacity: 40%;
 }
