--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: end;
   gap: 5em;
-  padding: 2em 5em 2em 2em;
+  padding: 20px 50px 20px 20px;
 }
 
 .container {
