Remove sass global variable file functionality

--- a/index.sass
+++ b/index.sass
@@ -1,6 +1,7 @@
+// CSS modules
+@use './src/components/App/App.module.sass'
+@use './src/components/Title/Title.module.sass'
+
+// Global fonts
 @import url('https://fonts.googleapis.com/css2?family=Krub&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap')
-
-
-@import './src/components/App/App.module.sass'
-@import './src/components/Title/Title.module.sass'
