Add title component

--- a/src/components/Title/Title.module.sass
+++ b/src/components/Title/Title.module.sass
@@ -1,3 +1,16 @@
+@use '../../styles/fonts' as *
+
 .titleContainer
   display: flex
   flex-direction: column
+  align-items: center
+
+.name
+  @each $property, $value in $title-font
+    #{$property}: $value
+  font-size: 120px
+
+.description
+  @each $property, $value in $body-font
+    #{$property}: $value
+  font-size: 60px
