--- a/src/components/App/App.module.sass
+++ b/src/components/App/App.module.sass
@@ -1,3 +1,14 @@
 body
   margin: 0
   padding: 0
+
+.headerContainer
+  position: absolute
+  width: 100vw
+
+.titleContainer
+  display: flex
+  height: 100vh
+  width: 100vw
+  justify-content: center
+  align-items: center
