--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -1,22 +1,26 @@
-.box
-  padding: 192px 128px 192px 128px
-  width: 60vw
-  height: 30vh
-  background-color: #D04949
-  display: flex
-  justify-content: center
-  align-items: center
-  border-radius: 16px
+.contentGrid
+  height: 100%
+  // Full size relative to parent div height given in <App>
+  display: grid
+  grid-template-columns: 20% 60% 20%
+  grid-template-rows: 20% 60% 20%
 
-.contentContainer
+.content
   display: flex
   flex-direction: column
+  justify-content: center
+  align-items: start
   gap: 24px
+  padding: 192px 128px 192px 128px
+  grid-column: 2 / 3
+  grid-row: 2 / 3
+  background-color: #d04949
+  border-radius: 16px
 
 h1, h2
-  color: #f7f7f8
   padding: 0
   margin: 0
+  color: #f7f7f8
 
 h1
   font-family: "Source Sans 3", sans-serif
