--- a/src/components/Title/Title.module.sass
+++ b/src/components/Title/Title.module.sass
@@ -5,7 +5,7 @@
   flex-direction: column
   align-items: center
 
-.name
+.email
   @each $property, $value in $title-font
     #{$property}: $value
   font-size: 120px
