--- a/src/components/Title/Title.module.sass
+++ b/src/components/Title/Title.module.sass
@@ -5,12 +5,12 @@
   flex-direction: column
   align-items: center
 
-.email
+.name
   @each $property, $value in $title-font
     #{$property}: $value
-  font-size: 120px
+    font-size: 120px
 
 .description
   @each $property, $value in $body-font
     #{$property}: $value
-  font-size: 48px
+    font-size: 48px
