--- a/src/components/HomeSkills/HomeSkills.module.sass
+++ b/src/components/HomeSkills/HomeSkills.module.sass
@@ -1,4 +1,7 @@
-.bubbleTitle, .bubbleContent
+.bubbleTitle
+  color: #f7baba
+
+.bubbleContent
   color: #f7f7f8
 
 ul
@@ -11,15 +14,13 @@ li
 
 .bubbleTitle
   font-family: "Source Sans 3", sans-serif
-  font-size: 16px
+  font-size: 18px
   font-weight: normal
-
 
 .bubbleContent
   font-family: Krub, sans-serif
   font-weight: 600
   font-size: 20px
-
 
 .bubbleContainer
   width: max-content
@@ -36,8 +37,8 @@ li
   height: 100%
   // Grid is only as large as parent in <App> allows
   width: 100%
-  grid-template-rows: 192px repeat(3, minmax(0, 1fr)) 192px
-  grid-template-columns: 192px repeat(3, minmax(0, 1fr)) 192px
+  grid-template-rows: 256px repeat(3, minmax(0, 1fr)) 256px
+  grid-template-columns: 256px repeat(3, minmax(0, 1fr)) 256px
   justify-items: center
   align-items: center
 
@@ -45,13 +46,10 @@ li
   grid-row: 3/4
   grid-column: 2/3
 
-
 .backEnd
   grid-row: 2/3
   grid-column: 3/4
 
-
 .more
   grid-row: 4/5
   grid-column: 4/5
-
