--- a/src/components/HomeSkills/HomeSkills.module.sass
+++ b/src/components/HomeSkills/HomeSkills.module.sass
@@ -37,8 +37,7 @@ li
   // Grid is only as large as parent in <App> allows
   width: 100%
   grid-template-rows: 192px repeat(3, minmax(0, 1fr)) 192px
-  grid-template-columns: 192px repeat(3, minmax(0, 1fr)) 192px
-  justify-items: center
+  grid-template-columns: 192px repeat(3, ) 192px
   align-items: center
 
 .frontEnd
