--- a/src/components/HomeSkills/HomeSkills.module.sass
+++ b/src/components/HomeSkills/HomeSkills.module.sass
@@ -1,5 +1,8 @@
-.bubbleTitle, .bubbleContent
+.bubbleContent
   color: #f7f7f8
+
+.bubbleTitle
+  color: #f7baba
 
 ul
   list-style-type: none
@@ -19,6 +22,7 @@ li
   font-weight: 600
   font-size: 20px
 
+// Contains .bubbleContent and .bubbleTitle, also defines background
 .bubbleContainer
   width: max-content
   background-color: #d04949
@@ -27,10 +31,19 @@ li
   gap: 24px
   padding: 32px 24px 32px 24px
   border-radius: 32px
-  align-self: flex-start
 
 .bubblesContainer
   display: flex
-  gap: 96px
+  gap: 128px
   justify-content: center
-  flex-basis: 100% // Flex container is as tall as parent in <App> allows
+  min-height: 80vh // Controls height of column within which bubble is allowed to align itself
+
+// Vertical alignment of bubbles within their parent flex containers
+.frontEnd
+  align-self: center
+
+.backEnd
+  align-self: start
+
+.more
+  align-self: end
