Add contact section to main page

--- a/src/components/App/App.module.sass
+++ b/src/components/App/App.module.sass
@@ -19,3 +19,14 @@ body
 .skillsContainer
   height: 100vh
   width: 100vw
+
+.contactContainer
+  // Size of contact section
+  padding-top: 64px
+  padding-bottom: 128px
+  background-color: #343f4c
+
+  // Centre component
+  display: flex
+  justify-content: center
+  align-items: center
