--- a/src/components/Contact/Contact.module.sass
+++ b/src/components/Contact/Contact.module.sass
@@ -3,8 +3,10 @@
   flex-direction: column
   width: max-content
   gap: 24px
+
+  // Background of form
   padding: 32px 64px 48px 48px
-  background: #d04949
+  background: #22282e
   border-radius: 12px
 
 .nameAndEmailContainer
@@ -46,13 +48,14 @@ textarea
   padding-top: 12px
   box-sizing: border-box
 
-h1
-  padding-left: 16px
+.h1
+  padding-left: 48px // Align header with form below
+  padding-bottom: 8px // Spacing between header and form 
   margin: 0
   font-family: "Source Sans 3", sans-serif
   font-size: 24px
   font-weight: 500
-  color: #343f4c
+  color: #f7f7f8
 
 input:focus, textarea:focus
   outline: none
