--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -17,12 +17,12 @@
   background-color: #d04949
   border-radius: 16px
 
-h1, h2
+.h1, h2
   padding: 0
   margin: 0
   color: #f7f7f8
 
-h1
+.h1
   font-family: "Source Sans 3", sans-serif
   font-weight: normal
   font-size: 48px
