--- a/src/components/App/App.module.sass
+++ b/src/components/App/App.module.sass
@@ -8,7 +8,7 @@ body
 
 .titleContainer
   display: flex
-  height: 100vh
+  height: 80vh
   width: 100vw
   justify-content: center
   align-items: center
@@ -30,3 +30,8 @@ body
   display: flex
   justify-content: center
   align-items: center
+
+.contentSkillsSpacing
+  height: 40vh
+  border: 1px solid black
+  
