Add spacing between HomeSkills and Contact sections

--- a/src/components/App/App.module.sass
+++ b/src/components/App/App.module.sass
@@ -34,4 +34,8 @@ body
 .contentSkillsSpacing
   height: 40vh
   border: 1px solid black
+
+.homeSkillsContactSpacing
+  height: 40vh
+  border: 1px solid black
   
