--- a/src/components/MainSkills/MainSkills.module.sass
+++ b/src/components/MainSkills/MainSkills.module.sass
@@ -25,7 +25,7 @@ li
 
 .bubbleContent > ul > li
   display: flex // Align icons and skill text side by side
-  align-items: flex-end
+  align-items: center // Vertically centre both icons and skill text
   gap: 12px
 
 // Contains .bubbleContent and .bubbleTitle, also defines background
