--- a/src/components/MainSkills/MainSkills.module.sass
+++ b/src/components/MainSkills/MainSkills.module.sass
@@ -14,10 +14,10 @@ li
 
 .bubbleTitle
   font-family: "Source Sans 3", sans-serif
-  font-size: 18px
+  font-size: 20px
   font-weight: normal
 
-// SVG + Skill
+// SVG + Skill text
 .bubbleContent
   font-family: Krub, sans-serif
   font-weight: 600
