--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,6 @@
 // CSS modules
 @use './src/components/App/App.module.sass';
-@use './src/components/Title/Title.module.sass';
+@use 'Title.module';
 
 // Global fonts
 @import url('https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
