--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -1,12 +1,12 @@
 .contactForm {
-  background: #22282e;
-  border-radius: 12px;
   display: flex;
   flex-direction: column;
-
-  gap: 24px;
-  padding: 32px 64px 48px 48px;
   width: max-content;
+  padding: 32px 64px 48px 48px;
+
+  border-radius: 12px;
+  background-color: #22282e;
+  gap: 24px;
 
 }
 
@@ -16,59 +16,61 @@
 }
 
 .email input, .name input, .textAreaContainer textarea {
-  border: 1px solid white;
-  border-radius: 12px;
-  box-shadow: 0px 0px 0px 0px rgb(0, 0, 0, 0.2);
-  box-sizing: border-box;
   font-family: "Krub", sans-serif;
   font-size: 16px;
-
+  box-sizing: border-box;
   padding: 0 0 0 16px;
   transition: border 0.3s, box-shadow 0.3s;
+  border: 1px solid white;
+  border-radius: 12px;
+
+
+  background-color: #f7f7f8;
+  box-shadow: 0px 0px 0px 0px rgb(0, 0, 0, 0.2);
 }
 
 .email input {
+  width: 300px;
   height: 48px;
   margin: 0;
-  width: 300px;
 }
 
 .name input {
+  width: 192px;
   height: 48px;
   margin: 0;
-  width: 192px;
 }
 
 .textAreaContainer textarea {
+  width: 512px;
   height: 256px;
   padding-top: 12px;
   resize: none;
-  width: 512px;
 }
 
 .textAreaContainer {
-  display: flex;
-
-  flex-direction: column;
   position: relative;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .h1 {
-  color: #f7f7f8;
   font-family: "Source Sans 3", sans-serif;
   font-size: 24px;
   font-weight: 500;
   margin: 0;
   padding-bottom: 8px;
   padding-left: 48px;
+  color: #f7f7f8;
 }
 
 input:focus, textarea:focus {
-  border: 1px solid #b82e2e;
-
-  box-shadow: 0px 4px 12px 0px rgb(0, 0, 0, 0.2);
-  outline: none;
   transition: border 0.3s, box-shadow 0.3s;
+
+  border: 1px solid #b82e2e;
+  outline: none;
+  box-shadow: 0px 4px 12px 0px rgb(0, 0, 0, 0.2);
 }
 
 .space {
@@ -76,16 +78,18 @@ input:focus, textarea:focus {
 }
 
 .submitButton {
-  background-color: transparent;
-  border: 1px solid black;
-  border-radius: 12px;
-
-  bottom: 12px;
-  cursor: pointer;
-  font-size: 12px;
-  padding: 8px 12px 8px 12px;
+  font-family: "Krub", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
   position: absolute;
   right: 12px;
+  bottom: 12px;
+  padding: 12px 24px 12px 24px;
+  cursor: pointer;
+  color: #f7f7f8;
+  border: none;
+  border-radius: 6px;
+  background-color: #ef6767;
 }
 
 
