move absolute position styling of button to be dependent on its parent container instead of the button component itself

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -76,3 +76,9 @@ input:focus, textarea:focus {
 .space {
   flex-grow: 1;
 }
+
+.buttonContainer {
+  position: absolute;
+  right: 12px;
+  bottom: 12px;
+}
