--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -77,8 +77,17 @@ input:focus, textarea:focus {
   flex-grow: 1;
 }
 
-.buttonContainer {
+.buttonStyle {
+  font-family: "Krub", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
   position: absolute;
   right: 12px;
   bottom: 12px;
+  padding: 12px 24px 12px 24px;
+  cursor: pointer;
+  color: #f7f7f8;
+  border: none;
+  border-radius: 6px;
+  background-color: #ef6767;
 }
