--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,6 +1,6 @@
 .contentGrid {
   display: grid;
-  // Full size relative to parent div height given in <App>
+  // Full size relative to parent div height given in <Home>
   height: 100%;
   grid-template-columns: 20% 60% 20%;
   grid-template-rows: 20% 60% 20%;
