--- a/src/components/util/GalleryFrame/GalleryFrame.module.scss
+++ b/src/components/util/GalleryFrame/GalleryFrame.module.scss
@@ -2,17 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 500px;
-  height: 500px;
+
+  min-width: 500px;
+  min-height: 500px;
   border: 1px solid red;
-
   background-color: gray;
-
-}
-
-.dummyFrame {
-  width: 500px;
-  height: 1000px;
 }
 
 #one {
