implement correct carousel scrolling behaviour

--- a/src/components/util/Gallery/Gallery.module.scss
+++ b/src/components/util/Gallery/Gallery.module.scss
@@ -6,7 +6,8 @@
   justify-content: center;
 
   // Fixed aperture of Gallery through which a GalleryFrame is displayed
-  width: 768px;
+  width: 1280px;
+  height: 720px;
   border: 1px solid black;
 
   aspect-ratio: 16/9;
