center absolutely positioned image swap animation direction for carousel

--- a/src/components/util/Gallery/Gallery.module.scss
+++ b/src/components/util/Gallery/Gallery.module.scss
@@ -3,14 +3,13 @@
   overflow: hidden;
   align-items: center;
 
+  // Fixed aperture of Gallery through which a GalleryFrame is seen
   justify-content: center;
-
-  // Fixed aperture of Gallery through which a GalleryFrame is displayed
-  width: 1280px;
-  height: 720px;
-  border: 1px solid black;
+  width: clamp(1280px, 1280px, 1280px);
+  background-color: black;
 
   aspect-ratio: 16/9;
+
 }
 
 .galleryContainer {
