fix button positioning of HomeSkills
refactor 'main*' files to 'home*'

--- a/src/components/HomeSkills/HomeSkills.module.scss
+++ b/src/components/HomeSkills/HomeSkills.module.scss
@@ -78,9 +78,8 @@ li {
   color: #f7f7f8;
   border: none;
   border-radius: 6px;
-  // background-color is defined in variants
 }
 
-.homeSkillsContainer {
+.skillsContainer {
   position: relative;
 }
